[tool.poetry]
name = "optional-groups"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
colorama = "0.4.6"

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
